search suggestions in order create, z-index fix

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,3 +28,7 @@
     max-width: 100%;
     max-height: 100%;
 }
+
+.zindex-10{
+    z-index:10;
+}
